--- a/market/src/app/home/home.component.html
+++ b/market/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <h1 class="mat-h1">Today's Deals</h1>
   <mat-grid-list cols="2" rowHeight="350px">
     <mat-grid-tile *ngFor="let card of cards" [colspan]="card['cols']" [rowspan]="card['rows']">
-      <mat-card class="dashboard-card">
+      <mat-card class="dashboard-card" [style.background-image]="getImage(card['imageName'])">
         <mat-card-header>
           <mat-card-title>
             {{card['title']}}
